Fixed some UI alignment of top header,footer and other ui fixes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,7 +56,7 @@ ul{ list-style-type: none; margin: 0}
 	font-size: 24px;
 	font-weight: bold;
 	/*margin: 0 40px;*/
-	padding: 10px 15px;
+	padding: 10px 3%;
 	text-shadow:0px 2px 5px #000;
 }
 #wrapper > .container{
@@ -64,10 +64,9 @@ ul{ list-style-type: none; margin: 0}
 	min-height: 500px;
 }
 
-/*Logo bar*/
+/*Logo bar
 #wrapper .logo_bar{
 	background: rgba(0,0,0,0.8);
-	/*margin: 0 -10px;*/
 	overflow: hidden;
 	padding: 10px 15px;
 }
@@ -90,6 +89,18 @@ ul{ list-style-type: none; margin: 0}
 	background: none;
 	border: none;
 	box-shadow: none;
+}*/
+#wrapper .header{
+	background: #fafafa;
+	background-image: -moz-linear-gradient(top,#fff,#f2f2f2);
+	background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#f2f2f2));
+	background-image: -webkit-linear-gradient(top,#fff,#f2f2f2);
+	background-image: -o-linear-gradient(top,#fff,#f2f2f2);
+	background-image: linear-gradient(to bottom,#fff,#f2f2f2);
+	border: 1px solid #d4d4d4;
+	box-shadow: 0 1px 4px rgba(0,0,0,0.065);
+	-webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.065);
+	-moz-box-shadow: 0 1px 4px rgba(0,0,0,0.065);
 }
 /*Nav bar*/
 #wrapper .navbar{
@@ -121,9 +132,13 @@ ul{ list-style-type: none; margin: 0}
 	margin: 0 1%;
 }
 #wrapper .navbar-inner{
+	border: none;
 	border-radius: 0;
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
 	padding: 10px;
 }
 #wrapper > .navbar-inverse .brand, #wrapper > .navbar-inverse .nav > li > a{
@@ -196,7 +211,8 @@ ul{ list-style-type: none; margin: 0}
 	margin: 5px 2%;
 }
 #game_search_form select{
-	width: 80%;
+	/*width: 80%;*/
+	width: 86%;
 }
 #game_search_form input[type='text']{
 	width: 88%;
@@ -205,6 +221,7 @@ ul{ list-style-type: none; margin: 0}
 	background: #49afcd;
 	color: #fff;
 	text-shadow:none;
+	width: 55px;
 }
 .thumb{
 	width: 150px;
@@ -636,7 +653,7 @@ ul{ list-style-type: none; margin: 0}
 	color: #999;
 	margin-top: 30px;
 	overflow: hidden;
-	padding: 2% 3%;
+	padding: 2% 0;
 }
 .footer .nav{
 	margin: 0;
